2004-02-10  Andrew Burton <adburton@users.sourceforge.net>

	* help/C/gtkam.xml: Minor changes prior to release.

2004-02-04  Andrew Burton <adburton@users.sourceforge.net>

	* Makefile.am: Add files NEWS, README and TODO to
	documentation directory.

2004-02-02  Andrew Burton <adburton@users.sourceforge.net>

	*src/gtkam-main.c: Add 'Refresh' button (fixes SF feature
	request 846947)

2004-02-01  Andrew Burton <adburton@users.sourceforge.net>

	GUI improvements to match Gnome HIG:

	* src/gtkam-save.c
	* src/gtkam-error.c
	* src/gtkam-error.h
	* src/gtkam-port.c

2004-01-26  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-save.c: Applied patch from Nils Rennebarth
	(nilsr@users.sourceforge.net) to make save dialog remember
	defaults (fixes SF feature request 865910).

2004-01-22  Andrew Burton <adburton@users.sourceforge.net>

	* Makefile.am: Add EXTRA_DIST clause so gtkam.desktop and
	gtkam.png are included with tarballs.
	* src/gtkam-list.c: Applied patch from Nils Rennebarth
	(nilsr@users.sourceforge.net) to make save progress transient
	to the main window.

2004-01-21  Andrew Burton <adburton@users.sourceforge.net>

	* configure.in: Fix missing Makefile clauses for omf-install
	and help subdirectories.

2004-01-17  Marcus Meissner <marcus@jet.franken.de>
	
	* src/gtkam-save.c: Fixed small memleak.
	
2004-01-14  Andrew Burton <adburton@users.sourceforge.net>

	* src/gtkam-tree.c: When loading cameras, destroy status widget
	when finished to prevent duplicate status lines appearing.
	* src/gtkam-list.c: When saving and deleting files from the
	context menu, allow for more than one file to be processed (fixes
	Debian bug #205460); destroy status widget when finished loading
	thumbnail (fixes Debian bug #198335); modify check for thumbnail
	loading so thumbnails for all possible files are shown, not just
	pictures (fixes Debian bug #198335, SF feature request #358874).

2004-01-14  Andrew Burton <adburton@users.sourceforge.net>
